--- a/index.html
+++ b/index.html
@@ -3,13 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Վեբ հրավիրատոմսերի ամենամեծ տեսականին Հայաստանում" />
-    <meta property="og:title" content="Հարսանեկան կամ նշանադրության վեբ հրավիրատոմս · Կոդ H265" />
-    <meta property="og:description" content="Վեբ հրավիրատոմսերի ամենամեծ տեսականին Հայաստանում" />
-    <meta property="og:type" content="website" />
     <meta property="og:image" content="https://static.tildacdn.one/tild3838-6566-4238-a161-333130376339/1200_copy.jpg" />
-    <link rel="icon" type="image/x-icon" href="https://static.tildacdn.one/tild6432-3561-4263-a432-373762313238/favicon-hraver.ico" />
-    <title>Հարսանեկան հրավիրատոմս · Կոդ H265</title>
+    <title>Գարուշ և Անի</title>
   </head>
   <body>
     <div id="root"></div>
